[package]
name = "voxelmapcache"
version = "0.1.2"
authors = ["RDCarrot <yyt226univ2017@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "^0.5", features = ["deflate-miniz"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
image = "^0.23"
clap = "^2.33"
slog = "^2.5"
slog-term = "^2.5"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
