[package]
name = "voxelmapcache"
version = "0.1.2"
authors = ["RDCarrot <yyt226univ2017@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = { version = "^0.5", features = ["deflate-miniz"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
image = "^0.23"
log = "^0.4"
env_logger = "^0.7"
clap = "^2.33"
bytes = "^0.5"
actix-multipart = "^0.2"
actix-rt = "^1.1"
actix-files = "^0.2"
actix-web = "^2.0"
futures = "^0.3"
num_cpus = "^1.13"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
